# tdbinlog_reader

./: .gitignore  README.md  main.py  pyproject.toml
binlog/: __init__.py  binlog.py  binlog_event.py  binlog_key_value.py  exceptions.py  handler.py  tl_parser.py
binlog/events/: __init__.py  aes_ctr_encryption.py
binlog/models/: __init__.py  auth_key.py
